# prada-rage

./: .gitignore  README.md  alembic.ini  config.yaml  pyproject.toml  test.config.yaml  workflow.ipynb
.github/workflows/: code-quality.yaml  pytest.yaml  tests.yaml
alembic/: env.py
alembic/versions/: 0dfd893f6bc7_message_can_refer_to_multiple_source_.py  20658262aa85_add_knowledge_base_research_topic_.py  53a8997487a2_research_context_non_null_goal_unique_.py  a3b9a5e19edf_knowledge_base_research_topics.py  a66a432bf8a8_user_notes.py  b5cd9a16f6ea_research_context_non_null_goal_unique_.py  cd6cbc865534_add_conversations_messages.py  d9841daf0019_create_base_models.py  e74b4720a4b4_user_notes.py  fe278579d45d_add_notes_for_docs_research_topics_.py
lib/: config.yaml
lib/caps/: controller.py  dto.py  http.py  models.py  presenter.py  primary_ports.py  usecase_models.py  usecases.py  view_models.py  web.py
lib/core/dto/: research_topic_repository_dto.py
lib/core/entity/: devices.py  models.py
lib/core/ports/primary/: prepare_data_from_websearch_ports.py  research_ports.py
lib/core/ports/secondary/: research_goal_repository.py  research_topic_repository.py  search_engine_output_port.py  website_scraper_output_port.py
lib/core/service/: embedding_service.py  inference_service.py  localgpt_embedding_service.py
lib/core/usecase/: research_usecase.py
lib/core/usecase_models/: research_usecase_models.py
lib/infrastructure/config/: containers.py  devices.py  ioc_config.py
lib/infrastructure/gateway/: google.py  google_search.py  google_search_gateway.py  website_scraper_gateway.py
lib/infrastructure/gateway/localgpt/: embedding_service.py  llm_models.py  localgpt_embedding_service.py  localgpt_inference_service.py
lib/infrastructure/repository/: database.py  sqla_research_goal_repository.py
lib/infrastructure/repository/sqla/: database.py  models.py  sqla_research_topic_repository.py
lib/sdk/: models.py  presenter.py
tests/: conftest.py  docker-compose.yml  markers.py  test_env_gateway.py
tests/gateways/: test_env_gateway.py  test_localgpt_embedding_service.py  test_localgpt_gateway.py  test_localgpt_gateway_LABG.py  test_search_gateway.py  test_website_scraper.py
tests/mocks/db/: chroma.sqlite3
tests/repositories/: test_rdbms.py  test_sqla_research_goal_repository.py
tests/repositories/sqla/: test_conversations.py  test_research_contexts.py  test_user_docs_research_topics.py  test_user_notes.py
